Bug 1973165 - Remove header download chunking. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D256515

--HG--
extra : amend_source : 285844131b8340dbd934508663cd2bdc5980af49